Small threading optimization
Use virtual threads or different executors where appropriate and refactored DeadLockDetector